--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,7 @@
     "AFL-3.0"
   ],
   "require": {
-    "php": "~5.5.0|~5.6.0",
-	"oiatsiuk/0211_extension": "*"
+    "php": "~5.5.0|~5.6.0"
   },
   "extra": {
     "map": [
